# Paul-Project

agent/: agent.py  livekit.toml  requirements.txt  trigger_call.py
backend/: Dockerfile  README.md  main.py  migration.py  pyproject.toml  requirements.txt  test.py
backend/src/api/: __init__.py  base_models.py  router.py
backend/src/models/: System_Prompt.py  model.py  prompt.py
backend/src/utils/: db.py  jwt_utils.py  mail_management.py  utils.py
